--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -10223,3 +10223,7 @@ span.fancytree-active span.fancytree-title {
     border: 1px dashed rgb(54, 127, 169);
     padding: 15px;
 }
+
+.carousel-control.left {background-image: linear-gradient(to right,rgba(0, 0, 0, 0.05) 0,rgba(0,0,0,.0001) 100%) !important;}
+.carousel-control.right {background-image: linear-gradient(to right,rgba(0,0,0,.0001) 0,rgba(0,0,0,0.05) 100%);}
+.carousel-control {width: 4%;}
