--- a/web/css/portales-main_1.css
+++ b/web/css/portales-main_1.css
@@ -456,61 +456,157 @@ button.company-bgcolor-2:hover, a.company-bgcolor-2:hover {
 
 @media (max-width: 3000px) {
   .white-piece {
-      width: 32%;
-  }
-}
-@media (max-width: 1790px) {
-  .white-piece {
-      width: 31%;
-  }
-}
-@media (max-width: 1700px) {
-  .white-piece {
-      width: 30%;
-  }
-}
-@media (max-width: 1600px) {
-  .white-piece {
       width: 29%;
   }
+  .container.coop {
+    width: 1372px;
+  }
+  .container.coop .navbar-nav {margin-left: 4%;}
 }
-@media (max-width: 1500px) {
+
+
+@media (max-width: 1790px) {
   .white-piece {
       width: 28%;
   }
 }
-@media (max-width: 1400px) {
+
+
+@media (max-width: 1700px) {
+  .white-piece {
+      width: 27%;
+  }
+}
+
+
+@media (max-width: 1600px) {
   .white-piece {
       width: 26%;
   }
 }
-@media (max-width: 1300px) {
+
+
+@media (max-width: 1500px) {
   .white-piece {
       width: 24%;
   }
 }
+
+
+@media (max-width: 1400px) {
+  .white-piece {
+      width: 22%;
+  }
+}
+
+
+@media (max-width: 1300px) {
+  .white-piece {
+      width: 23%;
+  }
+  .container.coop .navbar-header {margin-left: 22px;}
+  .container.coop .navbar-nav {
+    margin-left: 3%;
+  }
+}
+
+
 @media (max-width: 1200px) {
   .white-piece {
-      width: 29%;
+      width: 24%;
+  }
+  .container.coop .navbar-nav {
+    margin-left: 2%;
   }
 
 }
+
+
 @media (max-width: 1100px) {
   .white-piece {
-      width: 28%;
+      width: 24%;
+  }
+  .container.coop .navbar-nav {
+    margin-left: 0%;
   }
 }
+
+
 @media (max-width: 1000px) {
   .white-piece {
       width: 27%;
   }
 }
-@media (max-width: 991px) {
-  .white-piece {
-      width: 38%;
+
+@media (min-width: 992px) {
+  .featurette-heading {
+    margin-top: 120px;
+  }
+    .navbar > .container .navbar-brand.copservir {
+    margin-left: 0 !important;
   }
 }
+
+@media (max-width: 991px) {
+  .white-piece {
+      width: 28%;
+  }
+  .navbar > .container .navbar-brand.copservir {
+    margin-left: 0 !important;
+  }
+}
+
+@media (max-width: 900px) {
+  .white-piece {
+      width: 100%;
+      border-radius: 0;
+  }
+  .container.coop {
+    width: 100%;
+  }
+ .navbar > .container .navbar-brand.copservir{margin-left: 62% !important;margin-bottom: 20px}
+ .carousel.slide.banner-copservir{margin-top: 162px;}
+
+}
+
+
+@media (min-width: 768px) {
+  /* Navbar positioning foo */
+  .navbar-wrapper {
+
+  }
+  .navbar-wrapper .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .navbar-wrapper .navbar {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  /* The navbar becomes detached from the top, so we round the corners */
+  .navbar-wrapper .navbar {
+    margin-bottom: 0;
+  }
+
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+    .navbar > .container .navbar-brand.copservir {
+    margin-left: 55%;
+  }
+}
+
+
 @media (max-width: 767px) {
+  .container.coop {width: 100%;}
   .white-piece {
       width: 100%;
       border-radius: 0;
@@ -546,47 +642,24 @@ button.company-bgcolor-2:hover, a.company-bgcolor-2:hover {
   .carousel {
       margin-top: 0;
   }
-}
-
-
-
-
-@media (min-width: 768px) {
-  /* Navbar positioning foo */
-  .navbar-wrapper {
-
+  .navbar > .container .navbar-brand.copservir {
+    margin-left: 0%;
   }
-  .navbar-wrapper .container {
-    padding-right: 15px;
-    padding-left: 15px;
+  .carousel.slide.banner-copservir {
+    margin-top: 0;
   }
-  .navbar-wrapper .navbar {
-    padding-right: 0;
-    padding-left: 0;
-  }
-
-  /* The navbar becomes detached from the top, so we round the corners */
-  .navbar-wrapper .navbar {
-    margin-bottom: 0;
-  }
-
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
-  }
-
-  .featurette-heading {
-    font-size: 50px;
+    .navbar > .container .navbar-brand.copservir {
+    margin-left: 0 !important;
   }
 }
 
-@media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
-  }
-}
+
+
+
+
+/* FIN RESPONSIVE CSS
+-------------------------------------------------- */
+
 
 .portal-container {
     height: 100%;
@@ -651,3 +724,5 @@ button.company-bgcolor-2:hover, a.company-bgcolor-2:hover {
     transform: rotate(15deg);
     transition: all .4s;
 }
+.container.coop .navbar-nav > li > a {background-color: #3CB04B;}
+.container.coop .navbar-nav > li > a:hover {background-color: #146f02;} 
