--- a/web/css/portales-main_1.css
+++ b/web/css/portales-main_1.css
@@ -91,7 +91,7 @@ ul.list{ list-style-image: url("../../web/img/multiportal/tarjetamas/check.png")
 }
 .navbar-nav > li > a {
   color: #fff;
-  padding: 30px;
+  padding: 30px 20px;
 }
 .centered {
   text-align: center;
