--- a/web/css/portales-style.css
+++ b/web/css/portales-style.css
@@ -434,3 +434,12 @@ TARJETA MAS
   border: 1px solid #d8dee2;
   border-radius: 5px;
 }
+
+
+.submenu.sub-poveedor li{
+   background-color: #C00000;
+   border-left:5px solid #fff;
+}
+.submenu.sub-poveedor li:hover{
+   background-color: #EF4637;
+}
