--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -202,6 +202,10 @@ table.table.table-striped.table-bordered > thead > tr > th{
 }
 */
 
+.input-prepend .add-on{
+  position: inherit;
+}
+
 /*
 ::::::::::::::::::
 MENU DESPLEGABLE
