Ajustes estilos - Cerrar emergente - Barra cumple/aniv - Color menu

--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -484,7 +484,7 @@ body.boxed-layout .footer-widget {
   font-weight: normal;
 }
 .page-sidebar {
-  background-color: #103348 !important;
+  background-color: #1a4e6b !important;
   height: 100%;
   font-family: 'Open Sans';
   -webkit-backface-visibility: hidden;
@@ -694,7 +694,7 @@ body.boxed-layout .footer-widget {
 .page-sidebar.mini {
   width: 50px;
   overflow: visible !important;
-  background-color: #103348 !important;
+  background-color: #1a4e6b !important;
   height: 100%;
   margin-top: 0;
   position: fixed;
@@ -924,7 +924,7 @@ body.boxed-layout .footer-widget {
   top: 0;
   right: 0;
   width: 260px;
-  background-color: #103348;
+  background-color: #1a4e6b;
   height: 100%;
   z-index: 5;
   -webkit-transition: opacity 0.1s ease;
@@ -9047,7 +9047,7 @@ body.rtl .footer-widget {
     display: none;
   }
   .page-sidebar {
-    background-color: #103348 !important;
+    background-color: #1a4e6b !important;
   }
   .page-sidebar .page-sidebar-wrapper > ul > li.open > a,
   .page-sidebar .page-sidebar-wrapper > ul > li > a:hover,
