--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -260,3 +260,11 @@ MENU DESPLEGABLE
     border: 1px solid #A0A8AB;
     background-color: #fff;
 }
+
+li.list-menu-corporativo{
+    padding:0 !important;
+}
+
+.login-container > .tiles.white {
+  background-color: rgba(255, 255, 255, 0.61);
+}
