--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -5704,7 +5704,7 @@ form legend,
   top: -5px;
 }
 .tiles.white {
-  background-color: rgba(255, 255, 255, 0.61);
+  background-color: #ffffff;
   color: #8b91a0;
 }
 .tiles.white .controller a.remove:hover {
