--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -595,7 +595,7 @@ body.boxed-layout .footer-widget {
   margin: 0px;
   padding: 0px;
   margin-top: 1px !important;
-  padding: 0px 0px 15px 0px;
+  padding: 0px;
 }
 .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > a {
   margin-left: 0px;
