--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -10271,3 +10271,4 @@ span.fancytree-active span.fancytree-title {
     height: 100%;
     }
 }
+ul.menu-principal{margin-bottom: 30px !important;}
