Agregada gestion de usuarios modulo Proveedores
Gestion de usuarios para el modulo de proveedores terminado

--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -275,3 +275,7 @@ MENU DESPLEGABLE
     overflow: visible !important; 
     white-space: normal !important;
 }
+
+.datepicker {
+    background-color: white !important;
+}
