--- a/web/css/visita-medica.css
+++ b/web/css/visita-medica.css
@@ -1,3 +1,12 @@
+.site-error {
+    height: 100%;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    padding: 100px 26px 80px 26px;
+}
+
 .modal.map {
     position: fixed;
     top: 0;
