--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -292,3 +292,54 @@ MENU DESPLEGABLE
     top: 45%;
     right: 0;
 }
+
+#cumpleanios .grid-title {
+    padding: 0;
+    padding-top: 3px;
+    text-align: center;
+}
+
+#cumpleanios .grid-body {
+    padding: 0;
+    text-align: center;
+}
+
+#cumpleanios .img-circle {
+    margin-top: 6px!important;
+    width: 70%!important;
+    margin: auto;
+}
+
+.paginacion {
+    text-align: center;
+}
+
+
+div.circle-avatar{
+/* make it responsive */
+    max-width: 100%;
+    width:80%;
+    height:auto;
+    display:block;
+    /* div height to be the same as width*/
+    padding-top:80%;
+
+    /* make it a cirkle */
+    border-radius:50%;
+
+    /* Centering on image`s center*/
+    background-position-y: center;
+    background-position-x: center;
+    background-repeat: no-repeat;
+
+    /* it makes the clue thing, takes smaller dimention to fill div */
+    background-size: cover;
+
+    /* it is optional, for making this div centered in parent*/
+    margin: 0 auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin-top: 5px;
+}
