--- a/web/css/portales-main.css
+++ b/web/css/portales-main.css
@@ -80,13 +80,13 @@ ul.list{ list-style-image: url("../img/multiportal/tarjetamas/check.png"); }
   background-size: cover;
 }
 .nav-green .navbar-collapse.collapse.in .nav > li {
-       background: -moz-linear-gradient(280deg, #26BF4F 0%, #158132 100%); 
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #26BF4F), color-stop(100%, #158132)); 
-    background: -webkit-linear-gradient(280deg, #26BF4F 0%, #158132 100%); 
-    background: -o-linear-gradient(280deg, #26BF4F 0%, #158132 100%); 
-    background: -ms-linear-gradient(280deg, #26BF4F 0%, #158132 100%); 
-    background: linear-gradient(170deg, #26BF4F 0%, #158132 100%); 
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#26BF4F', endColorstr='#158132',GradientType=0 );
+       background: -moz-linear-gradient(280deg, #C00000 0%, #C00000 100%); 
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #C00000), color-stop(100%, #C00000)); 
+    background: -webkit-linear-gradient(280deg, #C00000 0%, #C00000 100%); 
+    background: -o-linear-gradient(280deg, #C00000 0%, #C00000 100%); 
+    background: -ms-linear-gradient(280deg, #C00000 0%, #C00000 100%); 
+    background: linear-gradient(170deg, #C00000 0%, #C00000 100%); 
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#C00000', endColorstr='#C00000',GradientType=0 );
 }
 
 .white-piece {
@@ -158,7 +158,7 @@ ul.list{ list-style-image: url("../img/multiportal/tarjetamas/check.png"); }
   font-family: Georgia;
 }
 .navbar-collapse.collapse.in {
-  background-color: rgba(0,0,0,0.5);
+  background-color: initial;
 }
 .gray-sec {
   background-color: #efefef;
