--- a/web/css/portales-main.css
+++ b/web/css/portales-main.css
@@ -858,3 +858,7 @@ button.company-bgcolor-2:hover, a.company-bgcolor-2:hover {
 .navbar-proveedores .dropdown-menu {
   background-color: #C00000 !important;
 }
+
+.calender-options-wrapper a{
+  color:#3A87AD !important;
+}
