--- a/web/css/portales-main.css
+++ b/web/css/portales-main.css
@@ -873,3 +873,9 @@ button.company-bgcolor-2:hover, a.company-bgcolor-2:hover {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+
+@media only screen and (max-width: 1100px) {
+  #myCarousel {
+    margin: 0;
+  }
+}
